--- a/PARCIAL.Rnw
+++ b/PARCIAL.Rnw
@@ -4,15 +4,16 @@
 \SweaveOpts{concordance=TRUE}
 
 <<>>=
+
 #CAREN ESTEFANI CALDERÓN
 
 #PROBLEMA1
-#Las ventajas de utilizar R son  la estabilidad y lo más importante que es gratuito, es una herramienta para hacer análisis estadístico, gráficas o reportes.
+#Las ventajas de utilizar R son  la estabilidad y lo más importante que es gratuito, es una herramienta para #hacer análisis estadístico, gráficas o reportes.
 #fire safety es 3.2.2, es la que se está utilizando actualmente
-#la lógica es que el número cada cierto tiempo cambia, el número del centro disminuye, mientras que el tercero cambia o aumenta.
+#la lógica es que el número cada cierto tiempo cambia, el número del centro disminuye, mientras que el tercero  aumenta.
 
 #PROBLEMA2
-A <- matrix(c(1, 2, 2, 1,3,4), nrow=2, ncol=3); A
+A <- matrix(c(1, 2, 2, 1, 3, 4), nrow=2, ncol=3); A
 B <- matrix(c(1, 2, 3, 0, 1, 2), nrow=3, ncol=2);B
 c <- matrix(c(3,4,2,-1,1,1,3,5,3), nrow=3, ncol=3);c
 D <- matrix(c(3, 2, -2, 4), nrow=2, ncol=2);D
@@ -26,12 +27,15 @@ c+E
 E+c
 D-F
 -3*c
-
+5*O
+2*c
+3*E
+2*B
 
 #PROBLEMA3
 A <- matrix(c(2,3,4,3,2,1,4,2,6,3,5,4), nrow=3, ncol=4); A
 B <- matrix(c(20,28,30,40,12,15,12,16,8,15,10,20), nrow=4, ncol=3); B
-A <- matriz(c(2,3,4,3,2,1,4,2,6,3,5,4), nrow=3, ncol=4)
+A <- matrix(c(2,3,4,3,2,1,4,2,6,3,5,4), nrow=3, ncol=4)
 B <- matrix(c(20,28,30,40,12,15,12,16,8,15,10,20), nrow=4, ncol=3)
              P<-A %*%B;P
              
@@ -47,6 +51,7 @@ lista1<-list(var1="Tomato",var2="Sweet",var3="Acid",var4="Texture")
 lista1
 
 #PROBLEMA7
+library(foreign)
 Baseimportante<-spss.get("empresas.sav",use.value.labels =TRUE)
 Baseimportante
 lista2<-list(AGR="Agricultura",CEN="Centrales de energía",BAN="Bancos",TC="Transporte y Comunicaciones")
